--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,13 +13,29 @@
         <h1>My Favorite Movies</h1>
       </section>
     </header>
-    <section class="wrapper">
+    <!-- <section class="wrapper">
       <section class="block">
         <section class="Panel">
           <a href="/login" class="login"> Login</a><br /><br />
           <a href="/signup" class="login"> Signup</a>
         </section>
       </section>
+    </section> -->
+    <section>
+      <section>
+        <section class="links">
+          <a href="/login" class="login"> Login</a>
+          <a href="/signup" class="login"> Signup</a>
+        </section>
+      </section>
+    </section>
+    <section class="wrapper block">
+      <img src="images/thor_ragnarok.jpeg" alt="Independence Day Move Poster">
+      <img src="images/independence_day_movieposter.jpeg" alt="Independence Day Movie Poster">
+      <img src="images/get_out.png" alt="Get Out Movie Poster">
+    </section>
+    <section class="slogan">
+      <h2>Keep all your favorite movies in one place and never have to scroll through Netflix again!</h2>
     </section>
   </body>
 </html>
