--- a/views/todos.ejs
+++ b/views/todos.ejs
@@ -63,7 +63,7 @@
           <!-- Above sets the poster path using the element -->
           
             <section class="titleFav">
-            <span class="mName"><%= el.movName.length > 20 ? el.movName.slice(0,32) + ' ...' : el.movName %></span><br> 
+            <span class="mName"><%= el.movName > 20 ? el.movName.slice(0,32) + ' ...' : el.movName %></span><br> 
             <!-- Above sets the pictures name -->
             </section>
             <span class='del'> REMOVE </span>
